2005-05-22  Audrius Meskauskas, <AudriusA@Bioinformatics.org>

	* org/omg/CORBA/ServiceDetail.java,
	org/omg/CORBA/ServiceDetailHelper.java,
	gnu/CORBA/ServiceDetailHolder.java: New files.

2005-05-21  Audrius Meskauskas, <AudriusA@Bioinformatics.org>

	* gnu/CORBA/ObjectCreator.java: Use gnu/CORBA namespace.

2005-05-21  Audrius Meskauskas, <AudriusA@Bioinformatics.org>

	* gnu/CORBA/universalHolder.java: New file.
	* gnu/CORBA/gnuAny.java (create_input_stream,
	read_value): Use the universalHolder.
	* gnu/CORBA/CDR/aligningInputStream.java
	(getBuffer): New method.

2005-05-21  Andreas Jaeger  <aj@suse.de>

	* java/lang/mprec.c (mult, lshift, b2d, d2b): Add parenthesis to
	avoid warnings.

2005-05-21  Archie Cobbs  <archie@dellroad.org>

	* NEWS: document VM interface changes.
	* java/lang/ClassLoader.java: (vmdata): add
	* vm/reference/java/lang/VMClass.java: (getModifiers()): add
	new parameter ignoreInnerClassesAttrib
	* vm/reference/java/lang/VMClassLoader.java: (defineClass()): remove
	deprecated version (getPrimitiveClass(String)): remove
	(getPrimitiveClass(char)): make native (loadClass()): make native
	* vm/reference/java/lang/VMThread.java: (vmdata): add
	(countStackFrames()): make native
	* vm/reference/java/lang/VMThrowable.java: (vmdata): add
	(fillInStackTrace()): make native
	(getStackTrace()): make native
	* vm/reference/java/lang/reflect/Constructor.java:
	(parameterTypes, exceptionTypes): remove
	(getParameterTypes(), getExceptionTypes()): make native

2005-05-21  Michael Koch  <konqueror@gmx.de>

	* resource/gnu/java/locale/LocaleInformation_as.properties,
	resource/gnu/java/locale/LocaleInformation_bg.properties,
	resource/gnu/java/locale/LocaleInformation_cs.properties,
	resource/gnu/java/locale/LocaleInformation_da.properties,
	resource/gnu/java/locale/LocaleInformation_de.properties,
	resource/gnu/java/locale/LocaleInformation_dz.properties,
	resource/gnu/java/locale/LocaleInformation_en.properties,