@@ -1,0 +1,88 @@
+/* ServiceInformation.java --
+   Copyright (C) 2005 Free Software Foundation, Inc.
+
+This file is part of GNU Classpath.
+
+GNU Classpath is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2, or (at your option)
+any later version.
+
+GNU Classpath is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with GNU Classpath; see the file COPYING.  If not, write to the
+Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
+02111-1307 USA.
+
+Linking this library statically or dynamically with other modules is
+making a combined work based on this library.  Thus, the terms and
+conditions of the GNU General Public License cover the whole
+combination.
+
+As a special exception, the copyright holders of this library give you
+permission to link this library with independent modules to produce an
+executable, regardless of the license terms of these independent
+modules, and to copy and distribute the resulting executable under
+terms of your choice, provided that you also meet, for each linked
+independent module, the terms and conditions of the license of that
+module.  An independent module is a module which is not derived from
+or based on this library.  If you modify this library, you may extend
+this exception to your version of the library, but you are not
+obligated to do so.  If you do not wish to do so, delete this
+exception statement from your version. */
+
+
+package org.omg.CORBA;
+
+import org.omg.CORBA.portable.IDLEntity;
+
+/**
+ * Stores information about the CORBA service, available from some ORB.
+ *
+ * This class is part of the service information support, but the
+ * 1.4 API specification states that this support should be not implemented.
+ *
+ * @see ORB#get_service_information
+ *
+ * @author Audrius Meskauskas, Lithuania (AudriusA@Bioinformatics.org)
+ */
+public final class ServiceInformation
+  implements IDLEntity
+{
+  /**
+   * The array of service details, defining the various aspects of this
+   * service.
+   */
+  public ServiceDetail[] service_details;
+
+  /**
+   * The array, defining various options of this service.
+   */
+  public int[] service_options;
+
+  /**
+   * Create an unitialised instance of the service information.
+   */
+  public ServiceInformation()
+  {
+  }
+
+  /**
+   * Create an instance of the service information, intialised with
+   * the passed values.
+   *
+   * @param _service_options the service options.
+   * @param _service_details the service details.
+   */
+  public ServiceInformation(int[] _service_options,
+                            ServiceDetail[] _service_details
+                           )
+  {
+    service_options = _service_options;
+    service_details = _service_details;
+  }
+}
