@@ -1,5 +1,11 @@
 2005-05-22  Audrius Meskauskas, <AudriusA@Bioinformatics.org>
 
+	* org/omg/CORBA/ServiceInformation.java,
+	org/omg/CORBA/ServiceInformationHelper.java,
+	org/omg/CORBA/ServiceInformationHolder: New files.
+
+2005-05-22  Audrius Meskauskas, <AudriusA@Bioinformatics.org>
+
 	* org/omg/CORBA/ServiceDetail.java,
 	org/omg/CORBA/ServiceDetailHelper.java,
 	gnu/CORBA/ServiceDetailHolder.java: New files.
